# ChangeLog for app-text/wv
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/wv/ChangeLog,v 1.14 2003/11/09 18:04:29 weeve Exp $

  09 Nov 2003; Jason Wever <weeve@gentoo.org> wv-1.0.0.ebuild:
  Marked stable for sparc.

*wv-1.0.0 (13 Sep 2003)

  13 Sep 2003; foser <foser@gentoo.org> wv-1.0.0.ebuild :
  New version, added xml2 USE flag and minor cleanups

  30 Aug 2003; Jason Wever <weeve@gentoo.org> wv-0.7.6.ebuild:
  Added ~sparc to keywords.

  04 Jul 2003; Luca Barbato <lu_zero@gentoo.org> wv-0.7.6.ebuild :
  Added ~ppc keyword

*wv-0.7.6 (18 Jun 2003)

  18 Jun 2003; foser <foser@gentoo.org> wv-0.7.6.ebuild :
  New version

*wv-0.7.5 (31 Mar 2003)

  31 Mar 2003; foser <foser@gentoo.org> wv-0.7.5.ebuild :
  New version, fixed deps

*wv-0.7.4-r1 (25 Jan 2003)

  26 Jan 2003; Brad Cowan <bcowan@gentoo.org> wv-0.7.4-r1.ebuild,
  files/digest-wv-0.7.4-r1:
  
  Added header file and fixed symlink.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*wv-0.7.4 (27 Nov 2002)

  27 Nov 2002; Brad Cowan <bcowan@gentoo.org> wv-0.7.4.ebuild,
  files/digest-wv-0.7.4:
  
  Version bump.

*wv-0.7.1 (8 Feb 2002)

  2 Aug 2002; phoen][x <phoenix@gentoo.org> wv-0.7.1.ebuild :
  Added LICENSE, KEYWORDS, SLOT.
  
  19 Apr 2002; G.Shapovalov <georges@its.caltech.edu> all_files :

  initial release. This is wv, formerly known as mswordview. This is a utility (or set of) which
  can convert MSWord files to different formats from clear text, html, tex, etc. to ps, pdf.
