@@ -1,6 +1,9 @@
 # ChangeLog for app-text/wv
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/wv/ChangeLog,v 1.14 2003/11/09 18:04:29 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/wv/ChangeLog,v 1.15 2004/01/07 14:48:22 gustavoz Exp $
+
+  07 Jan 2004; <gustavoz@gentoo.org> wv-1.0.0.ebuild:
+  marked stable on hppa
 
   09 Nov 2003; Jason Wever <weeve@gentoo.org> wv-1.0.0.ebuild:
   Marked stable for sparc.
